RESOLVED FIXED91938
[WINCE] Define NOMINMAX in the build system instead of Platform.h
https://bugs.webkit.org/show_bug.cgi?id=91938
Summary [WINCE] Define NOMINMAX in the build system instead of Platform.h
Patrick R. Gansterer
Reported 2012-07-22 01:32:41 PDT
[WINCE] Define NOMINMAX in the build system instead of Platform.h
Attachments
Patch (2.39 KB, patch)
2012-07-22 01:35 PDT, Patrick R. Gansterer
rniwa: review+
Patrick R. Gansterer
Comment 1 2012-07-22 01:35:57 PDT
Raphael Kubo da Costa (:rakuco)
Comment 2 2012-07-22 12:33:02 PDT
Comment on attachment 153688 [details] Patch LGTM from the build system side.
Ryosuke Niwa
Comment 3 2012-07-23 00:53:47 PDT
Comment on attachment 153688 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=153688&action=review > ChangeLog:8 > + Define it OptionsWindows.cmake, since NOMINMAX Nit: Define it in*.
Patrick R. Gansterer
Comment 4 2012-07-23 03:05:55 PDT
Note You need to log in before you can comment on or make changes to this bug.