[WINCE] Define NOMINMAX in the build system instead of Platform.h https://bugs.webkit.org/show_bug.cgi?id=91938

Reviewed by Ryosuke Niwa.

.:

Define it in OptionsWindows.cmake, since NOMINMAX
should to be defined for all windows ports.

* Source/cmake/OptionsWinCE.cmake:
* Source/cmake/OptionsWindows.cmake:

Source/WTF:

* wtf/Platform.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@123324 bbb929c8-8fbe-4397-9dbb-9b2b20218538